Use AMD with node_modules
We now use AMD to dynamically load code in CEF, including
node.js libs.

--- a/web/index.html.jade
+++ b/web/index.html.jade
@@ -3,7 +3,8 @@ html
   head
     meta(charset="utf-8")
     title Inexor Example site
-    script(src="code.js")
+    script(src="/node/requirejs")
+    script(src="/code.js")
     link(href="looks.css", rel="stylesheet")
   body
     h1 This site is fancy!
