--- a/web/main.html.jade
+++ b/web/main.html.jade
@@ -4,7 +4,7 @@ html
     meta(charset="utf-8")
     title Inexor Example site
     script(src="/node/requirejs")
-    script(src="/code.js")
-    link(href="looks.css", rel="stylesheet")
+    script(src="/main.js")
+    link(href="main.css", rel="stylesheet")
   body
     h1 This site is fancy!
