Use lib/modmap as a central config for amd/paths/...
This file should contain the paths of locations, the amd
configs, methods to list assets, ...

--- a/web/main.html.jade
+++ b/web/main.html.jade
@@ -5,6 +5,7 @@ html
     title Inexor Example site
     link(href="/main.css", rel="stylesheet")
     script(src="/require/requirejs")
+    script(src="/lib/modmap.js")
     script(src="/main.js")
   body
     inx-example(say="Woord")
