Add a window manager

--- a/web/components/inxExample.styl
+++ b/web/components/inxExample.styl
@@ -1,5 +1,6 @@
 inx-example, [inx-example]
-  width: 200
-  height: 200
+  width: 100%
+  height: 100%
   background: yellow
   display: block
+  color: black
