--- a/web/main.html.jade
+++ b/web/main.html.jade
@@ -8,4 +8,12 @@ html
     script(src="/require/requirejs")
     script(src="/main.js")
   body
-    inx-example(say="Woord")
+
+    wmwindow(title="Hello World Window")
+      inx-example(say="Wooord")
+
+    wmwindow(title="Hello World Window")
+      inx-example(say="Pupu", bg="green")
+
+    wmwindow(title="Hello World Window")
+      inx-example(say="XXX", bg="cyan")
