--- a/web/main.styl
+++ b/web/main.styl
@@ -2,3 +2,57 @@
 
 h1
   color: #005
+
+// Window manager
+// (for some reason terribly lacking in defaults)
+
+.wmWindow
+  position: absolute
+
+  .wmWindowBox
+    background: rgba(10,10,10,0.8)
+    color: #fefefe
+    border: 1px solid black
+    border-radius: 5px
+
+  .wmTitleBar
+    padding: 1px
+    border-bottom: 1px solid #444
+    text-align: center
+
+  .wmTitle
+    display: inline
+
+  .wmWindowBox
+    width: 100%
+    height: 100%
+  .wmContent
+    width: 100%
+    height: 70%
+
+  .wmButtonBar
+    float: left
+
+  .wmClose
+    float: left;
+    background: none;
+    border: 1px solid black;
+    width: 1.2em;
+    height: 1.2em;
+    margin: 0.2em;
+    border-radius: 100%;
+
+    background: red
+
+  .wmResize
+    float: right;
+    background: repeating-linear-gradient(135 deg, black 1px, transparent 6px);
+    width: 1.2em;
+    height: 1.2em;
+    border: none
+
+    margin-top: -1.2em;
+
+  .wmMaximize, .wmRestore
+    display: none
+    display: none
