Render the node ui in cef

--- a/web/main.styl
+++ b/web/main.styl
@@ -3,6 +3,11 @@
 h1
   color: #005
 
+// Make sure this is really transparent, so we can see inexor
+// behind it
+body, html, head
+  background: transparent !important
+
 // Window manager
 // (for some reason terribly lacking in defaults)
 
