--- a/node/webui/main.html.jade
+++ b/node/webui/main.html.jade
@@ -8,12 +8,4 @@ html
     script(src="/require/requirejs")
     script(src="/main.js")
   body
-
-    wmwindow(title="Hello World Window")
-      inx-example(say="Wooord")
-
-    wmwindow(title="Hello World Window")
-      inx-example(say="Pupu", bg="green")
-
-    wmwindow(title="Hello World Window")
-      inx-example(say="XXX", bg="cyan")
+    wm#masterWM
