Add a Component/attr to open windows on click

--- a/node/webui/windows/inxExample.html.jade
+++ b/node/webui/windows/inxExample.html.jade
@@ -2,5 +2,5 @@ h1 Very silly text
 
 p this is div 52
 
-button#open-another.btn.btn-primary(type=button)
+button.btn.btn-primary(type=button, guiopen="inx-example")
   | Open another window
