Implemented console and controller refactoring

--- a/node/assets/inexorui/partials/menu/multiplayer.html
+++ b/node/assets/inexorui/partials/menu/multiplayer.html
@@ -1,15 +1,4 @@
-<h2>Main Menu</h2>
-
-<div class="container">
-  Message: <input type="text" ng-model="message" />
-
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default" ng-click="changeText()"><i class="fa fa-pencil"></i> Change Text</button>
-    <button type="button" class="btn btn-default" ng-click="openConsole()"><i class="fa fa-terminal"></i> Open Console</button>
-  </div>
-</div>
-
-<br />
+<h2>Multiplayer</h2>
 
 <div class="container">
   <div class="form-group">
