Fully working console HUD + added HUD framework + hotkeys

--- a/node/assets/inexorui/partials/test/keyboard.html
+++ b/node/assets/inexorui/partials/test/keyboard.html
@@ -1,6 +1,9 @@
 <!-- textarea class="form-control" rows="5">
 </textarea -->
-<table class="table table-striped table-bordered table-hover">
+<div class="container">
+  <h2>Keyboard Debugging</h2>
+
+  <table class="table table-striped table-bordered table-hover">
 	<tr>
 	    <th></th>
 	    <th>onKeyDown</th>
@@ -25,4 +28,5 @@
 	    <td><input type="text" size="3" ng-model="keypress_which" /></td>
 	    <td><input type="text" size="3" ng-model="keyup_which" /></td>
 	</tr>
-</table>
+  </table>
+</div>
