--- a/node/assets/inexorui/partials/menu/main.html
+++ b/node/assets/inexorui/partials/menu/main.html
@@ -1,10 +1,27 @@
-<h2>Inexor</h2>
-
 <div class="container">
-  Message: <input type="text" ng-model="message" />
+  <h2>Inexor</h2>
 
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default" ng-click="changeText()"><i class="fa fa-pencil"></i> Change Text</button>
-    <button type="button" class="btn btn-default" ng-click="openConsole()"><i class="fa fa-terminal"></i> Open Console</button>
+  <div class="container">
+
+    <div class="well">
+      Message: <input type="text" ng-model="message" />
+    </div>
+
+    <hr />
+
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-default" ng-click="changeText()"><i class="fa fa-pencil"></i> Change Text</button>
+      <button type="button" class="btn btn-default" ng-click="hideNavigation()" ng-if="navigationVisible"><i class="fa fa-bars"></i> Hide Navigation</button>
+      <button type="button" class="btn btn-default" ng-click="showNavigation()" ng-if="!navigationVisible"><i class="fa fa-bars"></i> Show Navigation</button>
+    </div>
+
+    <hr />
+
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-default" ng-click="showConsole()"><i class="fa fa-terminal"></i> Open Console</button>
+      <button type="button" class="btn btn-default" ng-click="hideConsole()"><i class="fa fa-terminal"></i> Hide Console</button>
+    </div>
+
   </div>
+
 </div>
