--- a/node/assets/inexorui/css/inexorui.css
+++ b/node/assets/inexorui/css/inexorui.css
@@ -1,5 +1,61 @@
 body {
-	background-color: transparent;
+  background: url('http://sauerbraten.sourceforge.net/newerer/screenshot_2073037.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
+
+body.mainmenu {
+  background: transparent;
+}
+
+.inexor-menu-container-centered {
+  margin: auto;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  height: 80%;
+  border: 1px solid rgba(0, 255, 255, 0.3);
+  border-radius: 8px;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 40px;
+}
+
+.inexor-menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.inexor-menu-list.nav-tabs {
+  border-bottom: 0px;
+}
+
+.inexor-menu-item {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+.nav li.inexor-menu-item a {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  font-size: 5vh;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.nav li.inexor-menu-item a:hover {
+  margin-top: 6px;
+  margin-bottom: 4px;
+  color: white;
+  background-color: rgba(128, 128, 128, 0.2);
+  border: 0px;
 }
 
 /* The console container element */
