--- a/node/public/inexorui/partials/menu/multiplayer.html
+++ b/node/public/inexorui/partials/menu/multiplayer.html
@@ -1,3 +1,11 @@
+<div class="container inexor-menu-container-centered">
+  <ul class="inexor-menu-list nav nav-tabs">
+      <li class="inexor-menu-item"><a data-ui-sref="/menu/multiplayer/serverbrowser"><span class="inexor-menu-item-text">Server Browser</span></a></li>
+      <li class="inexor-menu-item"><a data-ui-sref="/menu/main"><span class="inexor-menu-item-text">... Back</span></a></li>
+  </ul>
+</div>
+
+<!--
 <div class="container">
   <h2>Multiplayer</h2>
   <div class="form-group">
@@ -17,3 +25,4 @@
     </div>
   </div>
 </div>
+-->
