Added some non-functional menus

--- a/node/assets/inexorui/partials/menu/options.html
+++ b/node/assets/inexorui/partials/menu/options.html
@@ -1,4 +1,5 @@
 <div class="container inexor-menu-container-centered">
+  <h2>Options</h2>
   <ul class="inexor-menu-list nav nav-tabs">
       <li class="inexor-menu-item"><a data-ui-sref="/menu/options/video"><span class="inexor-menu-item-text">Video Settings</span></a></li>
       <li class="inexor-menu-item"><a data-ui-sref="/menu/options/audio"><span class="inexor-menu-item-text">Audio Settings</span></a></li>
