Menus: Coop, multiplayer, fullscreen

--- a/node/assets/inexorui/partials/menu/options.html
+++ b/node/assets/inexorui/partials/menu/options.html
@@ -3,6 +3,7 @@
   <ul class="inexor-menu-list nav nav-tabs">
       <li class="inexor-menu-item"><a data-ui-sref="/menu/options/video"><span class="inexor-menu-item-text">Video Settings</span></a></li>
       <li class="inexor-menu-item"><a data-ui-sref="/menu/options/audio"><span class="inexor-menu-item-text">Audio Settings</span></a></li>
+      <li class="inexor-menu-item"><a ng-click="toggleFullscreen()"><span class="inexor-menu-item-text">Toggle Fullscreen</span></a></li>
       <li class="inexor-menu-item"><a data-ui-sref="/menu/main"><span class="inexor-menu-item-text">... Back</span></a></li>
   </ul>
 </div>
