Menus: Coop, multiplayer, fullscreen

--- a/node/assets/inexorui/partials/menu/multiplayer.html
+++ b/node/assets/inexorui/partials/menu/multiplayer.html
@@ -2,6 +2,7 @@
   <h2>Multiplayer</h2>
   <ul class="inexor-menu-list nav nav-tabs">
       <li class="inexor-menu-item"><a data-ui-sref="/menu/multiplayer/serverbrowser"><span class="inexor-menu-item-text">Server Browser</span></a></li>
+      <li class="inexor-menu-item"><a ng-click="connect('inexor.nooblounge.net')"><span class="inexor-menu-item-text">inexor.nooblounge.net</span></a></li>
       <li class="inexor-menu-item"><a data-ui-sref="/menu/main"><span class="inexor-menu-item-text">... Back</span></a></li>
   </ul>
 </div>
