--- a/node/assets/inexorui/partials/menu/main.html
+++ b/node/assets/inexorui/partials/menu/main.html
@@ -1,5 +1,7 @@
 <div class="container inexor-menu-container-centered">
-  <h2>Inexor</h2>
+  <div class="page-header">
+    <h1>Inexor</h1>
+  </div>
   <ul class="inexor-menu-list nav nav-tabs">
       <li class="inexor-menu-item"><a data-ui-sref="/menu/multiplayer"><span class="inexor-menu-item-text">Multiplayer</span></a></li>
       <li class="inexor-menu-item"><a data-ui-sref="/menu/botmatch"><span class="inexor-menu-item-text">Bot Match</span></a></li>
