--- a/node/assets/inexorui/partials/menu/options.html
+++ b/node/assets/inexorui/partials/menu/options.html
@@ -1,5 +1,7 @@
 <div class="container inexor-menu-container-centered">
-  <h2>Options</h2>
+  <div class="page-header">
+    <h1>Options</h1>
+  </div>
   <ul class="inexor-menu-list nav nav-tabs">
       <li class="inexor-menu-item"><a data-ui-sref="/menu/options/video"><span class="inexor-menu-item-text">Video Settings</span></a></li>
       <li class="inexor-menu-item"><a data-ui-sref="/menu/options/audio"><span class="inexor-menu-item-text">Audio Settings</span></a></li>
