--- a/node/assets/inexorui/partials/menu/serverbrowser.html
+++ b/node/assets/inexorui/partials/menu/serverbrowser.html
@@ -1,6 +1,23 @@
 <div class="container inexor-menu-container-centered">
-  <h2>Server Browser</h2>
-  <ul class="inexor-menu-list nav nav-tabs">
-      <li class="inexor-menu-item"><a data-ui-sref="/menu/main"><span class="inexor-menu-item-text">... Back</span></a></li>
-  </ul>
+  <div class="page-header">
+    <h1>Server Browser</h1>
+  </div>
+  <table class="table table-striped table-hover inexor-serverbrowser-table">
+    <tr>
+      <th>Name</th>
+      <th>Mode</th>
+      <th>Map</th>
+      <th>Players</th>
+      <th>Time</th>
+      <th>Ping</th>
+    </tr>
+    <tr ng-repeat="server in ServerManager.getServers()" ng-click="connect(server.host, server.port)">
+      <td>{{server.name}}</td>
+      <td>{{server.mode}}</td>
+      <td>{{server.map}}</td>
+      <td>{{server.playerCount}}/{{server.maxPlayers}}</td>
+      <td>{{server.timeLeft}}</td>
+      <td>{{server.ping}}</td>
+    </tr>
+  </table>
 </div>
