--- a/node/assets/inexorui/partials/menu/botmatch.html
+++ b/node/assets/inexorui/partials/menu/botmatch.html
@@ -1,9 +1,7 @@
 <div class="container inexor-menu-container-centered">
-  <div class="page-header">
-    <h1>Bot Match</h1>
-  </div>
   <ul class="inexor-menu-list nav nav-tabs">
-      <li class="inexor-menu-item"><a ng-click="startBotMatch()"><span class="inexor-menu-item-text">Start Bot Match</span></a></li>
-      <li class="inexor-menu-item"><a ui-sref="/menu/main"><span class="inexor-menu-item-text">... Back</span></a></li>
+      <li class="inexor-menu-header"><a><span class="inexor-menu-item-text">Bot Match</span></a></li>
+      <li class="inexor-menu-item" ng-click="startBotMatch()"><a><span class="inexor-menu-item-text">Start Bot Match</span></a></li>
+      <li class="inexor-menu-item" ui-sref="/menu/main"><a><span class="inexor-menu-item-text">... Back</span></a></li>
   </ul>
 </div>
