--- a/node/assets/inexorui/partials/menu/multiplayer.html
+++ b/node/assets/inexorui/partials/menu/multiplayer.html
@@ -1,10 +1,8 @@
 <div class="container inexor-menu-container-centered">
-  <div class="page-header">
-    <h1>Multiplayer</h1>
-  </div>
   <ul class="inexor-menu-list nav nav-tabs">
-      <li class="inexor-menu-item"><a data-ui-sref="/menu/multiplayer/serverbrowser"><span class="inexor-menu-item-text">Server Browser</span></a></li>
-      <li class="inexor-menu-item"><a data-ui-sref="/menu/main"><span class="inexor-menu-item-text">... Back</span></a></li>
+      <li class="inexor-menu-header"><a><span class="inexor-menu-item-text">Multiplayer</span></a></li>
+      <li class="inexor-menu-item" data-ui-sref="/menu/multiplayer/serverbrowser"><a><span class="inexor-menu-item-text">Server Browser</span></a></li>
+      <li class="inexor-menu-item" data-ui-sref="/menu/main"><a><span class="inexor-menu-item-text">... Back</span></a></li>
   </ul>
 </div>
 
