--- a/node/public/inexorui/partials/menu/main.html
+++ b/node/public/inexorui/partials/menu/main.html
@@ -1,14 +1,12 @@
 <div class="container inexor-menu-container-centered">
-  <div class="page-header">
-    <h1>Inexor</h1>
-  </div>
   <ul class="inexor-menu-list nav nav-tabs">
-      <li class="inexor-menu-item"><a data-ui-sref="/menu/multiplayer"><span class="inexor-menu-item-text">Multiplayer</span></a></li>
-      <li class="inexor-menu-item"><a data-ui-sref="/menu/botmatch"><span class="inexor-menu-item-text">Bot Match</span></a></li>
-      <li class="inexor-menu-item"><a data-ui-sref="/menu/edit"><span class="inexor-menu-item-text">Coop Edit</span></a></li>
-      <li class="inexor-menu-item"><a data-ui-sref="/menu/options"><span class="inexor-menu-item-text">Options</span></a></li>
-      <li class="inexor-menu-item"><a data-ui-sref="/menu/about"><span class="inexor-menu-item-text">About</span></a></li>
-      <li class="inexor-menu-item"><a data-ng-click="quit()"><span class="inexor-menu-item-text">Quit</span></a></li>
+      <li class="inexor-menu-header"><a><span class="inexor-menu-item-text">Inexor</span></a></li>
+      <li class="inexor-menu-item" data-ui-sref="/menu/multiplayer"><a><span class="inexor-menu-item-text">Multiplayer</span></a></li>
+      <li class="inexor-menu-item" data-ui-sref="/menu/botmatch"><a><span class="inexor-menu-item-text">Bot Match</span></a></li>
+      <li class="inexor-menu-item" data-ui-sref="/menu/edit"><a><span class="inexor-menu-item-text">Coop Edit</span></a></li>
+      <li class="inexor-menu-item" data-ui-sref="/menu/options"><a><span class="inexor-menu-item-text">Options</span></a></li>
+      <li class="inexor-menu-item" data-ui-sref="/menu/about"><a><span class="inexor-menu-item-text">About</span></a></li>
+      <li class="inexor-menu-item" data-ng-click="quit()"><a><span class="inexor-menu-item-text">Quit</span></a></li>
   </ul>
 </div>
 
